# CLI_Embedded

./: README.md  cli.c  cli_cmd.c  console.c  console.h  uart_driver.c  uart_driver.h
GD32 CLI Example/: CMakeLists.txt  cli.h  console.c  console.h  fifo.c  fifo.h  gd32e23x_it.c  gd32e23x_it.h  gd32e23x_libopt.h  main.c  main.h  readme.txt  relay.c  relay.h  systick.c  systick.h  uart_driver.c  uart_driver.h  variables.c  variables.h
GD32 CLI Example/MDK-ARM/: Project.uvguix.Jitain Sangwan  Project.uvoptx  Project.uvprojx
GD32 CLI Example/MDK-ARM/list/: Project.map  startup_gd32e23x.lst
GD32 CLI Example/MDK-ARM/output/: Project.axf  Project.build_log.htm  Project.htm  Project.lnp  Project_GD32E230G_START.dep  cli.d  cli_cmd.d  console.d  fifo.d  gd32e230g_start.d  gd32e23x_adc.d  gd32e23x_cmp.d  gd32e23x_crc.d  gd32e23x_dbg.d  gd32e23x_dma.d  gd32e23x_exti.d  gd32e23x_fmc.d  gd32e23x_fwdgt.d  gd32e23x_gpio.d  gd32e23x_i2c.d  gd32e23x_it.d  gd32e23x_misc.d  gd32e23x_pmu.d  gd32e23x_rcu.d  gd32e23x_rtc.d  gd32e23x_spi.d  gd32e23x_syscfg.d  gd32e23x_timer.d  gd32e23x_usart.d  gd32e23x_wwdgt.d  main.d  relay.d  startup_gd32e23x.d  system_gd32e23x.d  systick.d  uart_driver.d
